fix(styles): update color variables and improve scrollbar styling

--- a/src/app.css
+++ b/src/app.css
@@ -11,9 +11,9 @@
   default: true;
   prefersdark: true;
   color-scheme: "dark";
-  --color-base-100: oklch(28.33% 0.016 252.42);
-  --color-base-200: oklch(25.26% 0.014 253.1);
-  --color-base-300: oklch(21.15% 0.012 254.09);
+  --color-base-100: oklch(42% 0.031 252.42);
+  --color-base-200: oklch(30.6% 0.014 253.1);
+  --color-base-300: oklch(21% 0.012 254.09);
   --color-base-content: oklch(98% 0.003 247.858);
   --color-primary: oklch(54% 0.245 262.881);
   --color-primary-content: oklch(96% 0.014 254.604);
@@ -21,7 +21,7 @@
   --color-secondary-content: oklch(13.602% 0.031 276.934);
   --color-accent: oklch(70% 0.14 182.503);
   --color-accent-content: oklch(27% 0.046 192.524);
-  --color-neutral: oklch(44% 0.043 257.281);
+  --color-neutral: oklch(40% 0.031 252.42);
   --color-neutral-content: oklch(92% 0.013 255.508);
   --color-info: oklch(68% 0.169 237.323);
   --color-info-content: oklch(28% 0.091 267.935);
@@ -47,7 +47,7 @@
     --dark-blurple: rgba(61, 72, 187, 0.8);
     --footer-height: 2.5rem;
     --sidebar-width: 14rem;
-    --color-bg: oklch(0.141 0.005 285.823);
+    --color-bg: oklch(22.4% 0.009 277.42);
   }
 
   html {
@@ -58,7 +58,7 @@
 
     * {
       scrollbar-width: thin;
-      scrollbar-color: var(--dc-blurple) var(--color-base-100);
+      scrollbar-color: var(--dc-blurple) transparent;
     }
   }
 
@@ -68,8 +68,8 @@
     line-height: 1.5;
     width: 100%;
     min-height: 100vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: hidden;
+    background-color: transparent;
   }
 
   @media (width >= 48rem) {
@@ -118,6 +118,14 @@
     grid-auto-flow: row;
     place-items: center;
     background-color: transparent;
+
+    &.server-select {
+      grid-auto-flow: column;
+
+      @media screen and (max-width: 450px) {
+        grid-auto-flow: row;
+      }
+    }
 
     a {
       @apply dy-link dy-link-hover;
